# cron_utility_terraform

./: .gitignore  README.md
daily_reminder/: .terraform.lock.hcl  backend.tf  main_trash_reminder.tf  terraform.tf
friday_roadshow_notifier/: .terraform.lock.hcl  backend.tf  main_friday_roadshow_notifier.tf
src/friday_roadshow_notifier/: Cargo.toml  README.md
src/friday_roadshow_notifier/src/: event_handler.rs  main.rs  slack_messenger.rs
src/trash_reminder/: Cargo.toml  README.md
src/trash_reminder/src/: event_handler.rs  main.rs  slack_messenger.rs  trash.rs  trash_schedule.rs
